platform/kubernetes/python_ms_k8s_manifest/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
